k8s/02-4-backend-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      # nodeSelector:
      #   kubernetes.io/hostname: minikube
      containers:
      - name: backend
        image: sara3259/app-translator-backend:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 3001
---
apiVersion: v1
kind: Service
metadata:
  name: backend-service
spec:
  # type: LoadBalancer
  selector:
    app: backend
  ports:
  - port: 3001
    targetPort: 3001
