k8s/05-frontend-example.yaml

apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:
  type: ????
  selector:
    app: frontend
  ports:
  - port: 80
    targetPort: 80
