k8s/06-ingress-complete.yaml
# apiVersion: apps/v1
# kind: Deployment
# metadata:
#   name: frontend
# spec:
#   replicas: 2
#   selector:
#     matchLabels:
#       app: frontend
#   template:
#     metadata:
#       labels:
#         app: frontend
#     spec:
#       containers:
#       - name: frontend
#         image: sara3259/app-translator-frontend:latest
#         ports:
#         - containerPort: 80
# ---
# apiVersion: v1
# kind: Service
# metadata:
#   name: frontend-service
# spec:
#   selector:
#     app: frontend
#   ports:
#   - port: 80
#     targetPort: 80
# ---
# apiVersion: v1
# kind: Service
# metadata:
#   name: backend-service
# spec:
#   selector:
#     app: backend
#   ports:
#   - port: 3001
#     targetPort: 3001
# ---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata: 
  name: app-translator-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - host: translator.local
    http:
      paths:
      - path: /()(.*)
        pathType: Prefix
        backend:
          service:
            name: frontend-service
            port:
              number: 80
      - path: /api(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: backend-service
            port:
              number: 3001
